Add All HTML Pages

--- a/WebDesignLab1/Views/News/About.cshtml
+++ b/WebDesignLab1/Views/News/About.cshtml
@@ -1,1 +1,26 @@
-﻿
+﻿<h1>Here is something about us</h1>
+
+<p>This page will be sooner available...</p>
+
+<h2 style="padding: 100px 0 0 0">
+    By the way select what you want to improve on this WebSite
+    <br />
+    <br />
+</h2>
+
+<h3>
+    Chose one of the following options:
+    <br />
+    <br />
+</h3>
+
+<div style="display: flex; justify-content: space-between; flex-direction: column">
+    <select name="helper" id="help">
+        <option value="Readability">Readability</option>
+        <option value="Extension">Extensions</option>
+        <option value="Feature">New Features</option>
+        <option value="Performance">Better Performance</option>
+    </select>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+</div>
