--- a/WebDesignLab1/Views/News/Topics.cshtml
+++ b/WebDesignLab1/Views/News/Topics.cshtml
@@ -1,1 +1,55 @@
-﻿
+﻿<h1>There is the table of topics</h1>
+
+<table border="1">
+    <thead>
+        <tr>
+            <th>Amount of similar topics</th>
+            <th>Caption</th>
+            <th>Rating</th>
+            <th>Views</th>
+        </tr>
+    </thead>
+    <tbdy>
+        <tr>
+            <td>4</td>
+            <td>Announcing ASP.NET Core in .NET 7</td>
+            <td>9.5/10</td>
+            <td>32M</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>23</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>21</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbdy>
+    <tfoot>
+        <tr>
+            <th style="display: contents;">Total: 50</th>
+        </tr>
+    </tfoot>
+</table>
