--- a/WebDesignLab1/Views/News/Contacts.cshtml
+++ b/WebDesignLab1/Views/News/Contacts.cshtml
@@ -1,1 +1,101 @@
-﻿
+﻿<h1></h1>
+
+<h2>You can fill this form</h2>
+
+<div class="content">
+    <div class="inner-content">
+        <div>
+            <form>
+                <div class="form-group">
+                    <label for="FirstName" class="control-label">FirstName</label>
+                    <input for="FirstName" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="LastName" class="control-label">LastName</label>
+                    <input for="LastName" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="Email" class="control-label">Email</label>
+                    <input for="Email" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="Message" class="control-label">Message</label>
+                    <input for="Message" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="Description" class="control-label">Description</label>
+                    <input for="Description" class="form-control" />
+                </div>
+                <button class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
+    <div class="inner-content">
+        <div>
+            <p>
+                <strong>How Can We Help?</strong>
+            </p>
+            <p>
+                Please select a topic below related to your inquiry. 
+                If you don’t find what you need, fill out our contact form.
+            </p>
+            <p>
+                <a>
+                    <strong>Book a Demo</strong>
+                </a>
+            </p>
+            <p>Request a demo from one of our conversion specialists.</p>
+            <p>
+                <a>
+                    <strong>Get Inspired</strong>
+                </a>
+            </p>
+            <p>Discover the many ways in which our customers use Sleeknote.</p>
+            <p>
+                <a>
+                    <strong>Become a Partner</strong>
+                </a>
+            </p>
+            <p>Join our Partner Program and earn 25% recurring commissions.</p>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <h4 class="footer-caption">Contact Information</h4>
+    <div class="footer-contacts-container">
+        <p>
+            Sleeknote ApS
+            <br>
+            Ankersgade 12C, 1, 8000 Aarhus
+        </p>
+        <p class="footer-phone">+45 71 99 77 07</p>
+        <a>mail@something.com</a>
+    </div>
+</footer>
+
+<style>
+    .content{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .inner-content{
+        width: 400px;
+    }
+
+    .footer-caption{
+        text-align: center;
+        padding-top: 50px;
+    }
+
+    .footer-contacts-container{
+        display: flex;
+        justify-content: space-between;
+        padding-top: 30px;
+    }
+
+    .footer-phone{
+        padding-right: 70px;
+    }
+</style>
