--- a/WebDesignLab1/Views/News/Search.cshtml
+++ b/WebDesignLab1/Views/News/Search.cshtml
@@ -1,1 +1,30 @@
-﻿
+﻿<div style="background-color: #006DEF;height: 100px; padding: 1.5rem;">
+    <div class="content">
+        <input placeholder="Search the News" style="flex: 1; width: 90%; height: 100%; border: none" />
+        <button class="btn-search">
+            <span>
+                <svg viewBox="0 0 32 32" width="1em" height="1em"
+                     class="ssrcss-xi5oyi-StyledIcon e6m7o991"
+                     focusable="false" aria-hidden="true">
+                    <path d="m30.6 28.1-8.3-8.3c1.5-2 2.4-4.4 2.4-7.2C24.7 6 19.6 1 13
+                    1S1.4 6.1 1.4 12.7 6.5 24.3 13 24.3c2.3 0 4.4-.6 6.2-1.8l8.5 8.5 2.9-2.9zM4
+                    12.6c0-5.2 3.9-9.1 9-9.1s9 3.9 9 9.1c0 5.2-3.9 9.1-9 9.1s-9-3.9-9-9.1z"></path>
+                </svg>
+            </span>
+        </button>
+    </div>
+</div>
+
+<style>
+    .content{
+        background-color: #FFFFFF; 
+        width: 600px; 
+        height: 50px;
+        margin: auto 210px auto 210px;
+        padding-left: 20px;
+    }
+    .btn-search{
+        border: none;
+        background-color: #FFFFFF;
+    }
+</style>
